sidebar layout issue

--- a/src/TopNav/topnav.css
+++ b/src/TopNav/topnav.css
@@ -19,6 +19,7 @@
 }
 
 .Topnav nav a {
+  font-family: 'Manjari';
   margin-right: 20px;
 }
 
